# BDA_group8

./: .gitignore  LLM.py  RAG.py  README.md  main.py  pyproject.toml  setup_rich_menu.py  summarizer.py
doc/: linebot.md
documents/: ACP_zh-tw.md  document1.txt  document2.txt  document3.txt
script/: run_backend.sh  run_ngrok.sh
utils/: RAG.py  args.py  conversation_memory.py  email.py  env.py  ollama_client.py  text_processing.py
